--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,26 +1,32 @@
 name: ci
 
 on:
-  push:
-    branches:
-      - 'main'
+  schedule:
+    - cron:  '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
+  matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      -
+        name: Set matrix for build
+        id: set-matrix
+        run: |
+          export TAGS=$(curl https://hub.docker.com/v2/repositories/felixoi/openjdk-maven-node/tags | jq -c '[.results[].name]')
+          echo "::set-output name=matrix::$( echo "{tags: $TAGS}" )"    
+
   docker:
+    needs: matrix
     strategy:
-      matrix:
-        tags: ${{ steps.set-matrix.outputs.matrix }}
+      matrix: ${{fromJson(needs.matrix.outputs.matrix)}}
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set matrix for build
-        id: set-matrix
-        run: |
-          export TAGS=$(curl https://hub.docker.com/v2/repositories/felixoi/openjdk-maven-node/tags | jq '.results[].name')
-          echo "::set-output name=matrix::$( echo "$TAGS" )"          
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
